--- a/css/style.css
+++ b/css/style.css
@@ -41,8 +41,61 @@ body {
   display: none;
 }
 
+#head-full-wrapper {
+  position: relative;
+}
+
+#head-top-full-wrapper {
+  position: relative;
+}
+
+#head-top-wrapper {
+  position: relative;
+}
+
+#head-top-left-wrapper {
+  position: relative;
+}
+
+#head-top-middle-wrapper {
+  position: relative;
+}
+
+#head-top-right-wrapper {
+  position: relative;
+}
+
+#head-middle-full-wrapper {
+  position: relative;
+  height: 180px;
+}
+
+#head-middle-wrapper {
+  position: relative;
+}
+
+#head-bloginfo-wrapper {
+  position: relative;
+}
+
+#head-sidebar-wrapper {
+  position: relative;
+}
+
+#head-bottom-full-wrapper {
+  position: relative;
+}
+
+#head-bottom-wrapper {
+  position: relative;
+}
+
 #content-wrapper {
   overflow: hidden;
+  color: #fefefe;
+  font-size: 1.4em;
+  text-shadow: 0 0 5px black;
+  padding: 0 15px;
 }
 
 #content-left-wrapper-frontpage, #content-left-wrapper {
@@ -51,16 +104,37 @@ body {
 }
 
 #content-middle-wrapper {
-  margin: 0;
+  float: left;
+}
+
+#content-right-wrapper {
+  float: right;
+  width: 20%;
+}
+
+#content-middle-wrapper, #content-right-wrapper {
+  margin: 24px 0;
   padding: 0;
-  width: 100%;
+}
+
+#footer-full-wrapper {
+  background-color: rgba(0, 0, 0, 0.82);
+  color: #fefefe;
+}
+
+.footer-middle-sidebar-wrapper {
+  float: left;
 }
 
 #footer-bottom-wrapper {
   text-align: center;
 }
 
-#head-bottom-wrapper, #head-top-left-wrapper, #bottom-nav-wrapper {
+#footer-last-copyright {
+  padding: 150px 0 15px 0;
+}
+
+#head-bottom-wrapper, #head-top-left-wrapper, #bottom-nav-wrapper, #menu-frontpage, #menu-content {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
@@ -78,15 +152,13 @@ body {
   border-radius: 0;
   border: 1px solid transparent;
 }
-#content-left-wrapper nav .dropdown-menu, #content-left-wrapper-frontpage nav .dropdown-menu, #head-top-left-wrapper nav .dropdown-menu, #bottom-nav-wrapper nav .dropdown-menu, #meta-head-nav-wrapper nav .dropdown-menu {
-  display: none;
-}
 #content-left-wrapper nav ul li.dropdown::after, #content-left-wrapper-frontpage nav ul li.dropdown::after, #head-top-left-wrapper nav ul li.dropdown::after, #bottom-nav-wrapper nav ul li.dropdown::after, #meta-head-nav-wrapper nav ul li.dropdown::after {
   content: "";
   font-family: "Font Awesome 5 Free";
   font-weight: 900;
+  font-size: 0.7em;
   position: absolute;
-  bottom: 0;
+  bottom: 0.35em;
 }
 #content-left-wrapper nav ul li a, #content-left-wrapper-frontpage nav ul li a, #head-top-left-wrapper nav ul li a, #bottom-nav-wrapper nav ul li a, #meta-head-nav-wrapper nav ul li a {
   display: block;
@@ -96,11 +168,11 @@ body {
 #content-left-wrapper nav ul li a img, #content-left-wrapper-frontpage nav ul li a img, #head-top-left-wrapper nav ul li a img, #bottom-nav-wrapper nav ul li a img, #meta-head-nav-wrapper nav ul li a img {
   vertical-align: text-bottom;
 }
-#content-left-wrapper nav ul li:hover, #content-left-wrapper nav ul li.active, #content-left-wrapper-frontpage nav ul li:hover, #content-left-wrapper-frontpage nav ul li.active, #head-top-left-wrapper nav ul li:hover, #head-top-left-wrapper nav ul li.active, #bottom-nav-wrapper nav ul li:hover, #bottom-nav-wrapper nav ul li.active, #meta-head-nav-wrapper nav ul li:hover, #meta-head-nav-wrapper nav ul li.active {
-  border-radius: 26px;
+#content-left-wrapper nav ul li:hover, #content-left-wrapper nav ul li.active, #content-left-wrapper nav ul li.hover, #content-left-wrapper-frontpage nav ul li:hover, #content-left-wrapper-frontpage nav ul li.active, #content-left-wrapper-frontpage nav ul li.hover, #head-top-left-wrapper nav ul li:hover, #head-top-left-wrapper nav ul li.active, #head-top-left-wrapper nav ul li.hover, #bottom-nav-wrapper nav ul li:hover, #bottom-nav-wrapper nav ul li.active, #bottom-nav-wrapper nav ul li.hover, #meta-head-nav-wrapper nav ul li:hover, #meta-head-nav-wrapper nav ul li.active, #meta-head-nav-wrapper nav ul li.hover {
+  border-radius: 24px;
   border: 1px solid #bbb;
 }
-#content-left-wrapper nav ul li:hover a, #content-left-wrapper nav ul li:hover.dropdown::after, #content-left-wrapper-frontpage nav ul li:hover a, #content-left-wrapper-frontpage nav ul li:hover.dropdown::after, #head-top-left-wrapper nav ul li:hover a, #head-top-left-wrapper nav ul li:hover.dropdown::after, #bottom-nav-wrapper nav ul li:hover a, #bottom-nav-wrapper nav ul li:hover.dropdown::after, #meta-head-nav-wrapper nav ul li:hover a, #meta-head-nav-wrapper nav ul li:hover.dropdown::after {
+#content-left-wrapper nav ul li:hover a, #content-left-wrapper nav ul li:hover.dropdown::after, #content-left-wrapper nav ul li.hover a, #content-left-wrapper nav ul li.hover.dropdown::after, #content-left-wrapper-frontpage nav ul li:hover a, #content-left-wrapper-frontpage nav ul li:hover.dropdown::after, #content-left-wrapper-frontpage nav ul li.hover a, #content-left-wrapper-frontpage nav ul li.hover.dropdown::after, #head-top-left-wrapper nav ul li:hover a, #head-top-left-wrapper nav ul li:hover.dropdown::after, #head-top-left-wrapper nav ul li.hover a, #head-top-left-wrapper nav ul li.hover.dropdown::after, #bottom-nav-wrapper nav ul li:hover a, #bottom-nav-wrapper nav ul li:hover.dropdown::after, #bottom-nav-wrapper nav ul li.hover a, #bottom-nav-wrapper nav ul li.hover.dropdown::after, #meta-head-nav-wrapper nav ul li:hover a, #meta-head-nav-wrapper nav ul li:hover.dropdown::after, #meta-head-nav-wrapper nav ul li.hover a, #meta-head-nav-wrapper nav ul li.hover.dropdown::after {
   text-shadow: 2px 3px 4px rgba(0, 0, 0, 0.7);
 }
 
@@ -113,6 +185,9 @@ body {
 #content-left-wrapper nav ul li, #content-left-wrapper-frontpage nav ul li {
   margin: 1px 2px;
   padding: 2px 16px;
+  border: none;
+  border-top: 1px solid transparent;
+  border-bottom: 1px solid transparent;
 }
 #content-left-wrapper nav ul li.dropdown::after, #content-left-wrapper-frontpage nav ul li.dropdown::after {
   padding: 3px 0;
@@ -122,42 +197,67 @@ body {
   text-align: left;
   padding: 0 2px 0 2px;
 }
+#content-left-wrapper nav ul li:hover, #content-left-wrapper nav ul li.active, #content-left-wrapper nav ul li.hover, #content-left-wrapper-frontpage nav ul li:hover, #content-left-wrapper-frontpage nav ul li.active, #content-left-wrapper-frontpage nav ul li.hover {
+  border: none;
+  border-top: 1px solid #aaa;
+  border-bottom: 1px solid #aaa;
+}
 
-#head-top-left-wrapper nav ul, #bottom-nav-wrapper nav ul {
+#bottom-nav-wrapper nav ul {
   margin: 0 auto 0 0;
   padding: 1px 0;
 }
-#head-top-left-wrapper nav ul li, #bottom-nav-wrapper nav ul li {
+#bottom-nav-wrapper nav ul li {
   margin: 1px 2px;
   padding: 2px 16px;
   float: left;
   font-size: 0.9em;
+  border: none;
+  border-left: 1px solid transparent;
+  border-right: 1px solid transparent;
 }
-#head-top-left-wrapper nav ul li.dropdown::after, #bottom-nav-wrapper nav ul li.dropdown::after {
+#bottom-nav-wrapper nav ul li.dropdown::after {
   padding: 3px 0;
   right: 4px;
 }
-#head-top-left-wrapper nav ul li a, #bottom-nav-wrapper nav ul li a {
+#bottom-nav-wrapper nav ul li a {
   text-align: center;
   padding: 0;
 }
+#bottom-nav-wrapper nav ul li:hover, #bottom-nav-wrapper nav ul li.active, #bottom-nav-wrapper nav ul li.hover {
+  border: none;
+  border-left: 1px solid #aaa;
+  border-right: 1px solid #aaa;
+}
 
-#meta-head-nav-wrapper nav ul {
+#head-top-left-wrapper nav ul, #meta-head-nav-wrapper nav ul {
   margin: 0 auto;
   padding: 0;
 }
-#meta-head-nav-wrapper nav ul li {
+#head-top-left-wrapper nav ul li, #meta-head-nav-wrapper nav ul li {
   margin: 1px 20px;
   padding: 0 10px;
   float: left;
+  border: none;
+  border-left: 1px solid transparent;
+  border-right: 1px solid transparent;
 }
-#meta-head-nav-wrapper nav ul li.dropdown::after {
+#head-top-left-wrapper nav ul li.dropdown::after, #meta-head-nav-wrapper nav ul li.dropdown::after {
   padding: 12px 0;
   right: 10px;
 }
-#meta-head-nav-wrapper nav ul li a {
+#head-top-left-wrapper nav ul li a, #meta-head-nav-wrapper nav ul li a {
   text-align: center;
   padding: 12px 12px;
+}
+#head-top-left-wrapper nav ul li:hover, #head-top-left-wrapper nav ul li.active, #head-top-left-wrapper nav ul li.hover, #meta-head-nav-wrapper nav ul li:hover, #meta-head-nav-wrapper nav ul li.active, #meta-head-nav-wrapper nav ul li.hover {
+  border: none;
+  border-left: 1px solid #aaa;
+  border-right: 1px solid #aaa;
+}
+
+#head-top-left-wrapper nav ul {
+  margin: 0;
 }
 
 #head-text {
@@ -168,23 +268,28 @@ body {
 #head-title {
   position: absolute;
   top: 0;
-  left: 50%;
-  background: #e8e8e8;
-  display: inline;
-  margin: 15px;
-  margin-left: -140px;
-  padding: 2px 20px 6px 20px;
-  border-radius: 36px;
-  opacity: 0.75;
-  border-right: 20px solid #757575;
-  border-left: 20px solid #757575;
-  box-shadow: 6px 7px 8px 5px rgba(0, 0, 0, 0.5);
+  display: block;
+  width: 100%;
+  text-align: center;
+  margin: 60px 0 60px 0;
+  padding: 0;
 }
 #head-title a {
+  opacity: 1;
   text-decoration: none;
-  color: #848484;
-  text-shadow: -1px -1px 1px rgba(255, 255, 255, 0.1), 1px 1px 1px rgba(0, 0, 0, 0.5);
+  color: #b6b9b6;
+  font-weight: bold;
+  font-size: 1.2em;
+  background-image: linear-gradient(to bottom, #969696, #6e6e6e, #494949, #272727, #000000);
+  padding: 6px 24px;
+  border-radius: 26px;
+  border-left: 10px solid blue;
+  border-right: 10px solid blue;
 }
+#head-title a:hover, #head-title a.hover {
+  color: #333;
+}
+
 #head-description {
   display: none;
   position: absolute;
@@ -243,12 +348,42 @@ body {
   cursor: pointer;
 }
 
-a, a:hover, a:visited, a:focus, a:active {
+#menu-roundabout-meta-frontpage-nav {
+  position: relative;
+  width: 700px;
+  height: 700px;
+  margin: 0 auto;
+}
+
+.menu-roundabout-child, .menu-roundabout-child-inner {
+  border-radius: 75px;
+}
+
+.menu-roundabout-child {
+  position: absolute;
+  left: 275px;
+  top: 275px;
+  width: 150px;
+  height: 150px;
+  background-image: linear-gradient(to bottom, #969696, #6e6e6e, #494949, #272727, #000000);
+  box-shadow: 0px 4px 15px 1px rgba(0, 0, 0, 0.75);
+  text-align: center;
+}
+.menu-roundabout-child a {
+  color: #fefefe !important;
+  line-height: 150px;
+}
+
+.clear-fix {
+  clear: both;
+}
+
+a, a:hover, a:visited, a:focus, a:active, a.hover {
   text-decoration: none;
   color: #000;
 }
 
-a:hover {
+a:hover, a.hover {
   text-decoration: underline;
 }
 
