--- a/scss/style.scss
+++ b/scss/style.scss
@@ -51,41 +51,54 @@ body {
 }
 
 #head-full-wrapper {
+  position: relative;
 }
 
 #head-top-full-wrapper {
+  position: relative;
 }
 
 #head-top-wrapper {
+  position: relative;
 }
 
 #head-top-left-wrapper {
+  position: relative;
+
 
 }
 
 #head-top-middle-wrapper {
+  position: relative;
 }
 
 #head-top-right-wrapper {
+  position: relative;
 }
 
 #head-middle-full-wrapper {
+  position: relative;
+  height: 180px;
 }
 
 #head-middle-wrapper {
+  position: relative;
 }
 
 #head-bloginfo-wrapper {
+  position: relative;
 }
 
 #head-sidebar-wrapper {
+  position: relative;
 }
 
 #head-bottom-full-wrapper {
+  position: relative;
 }
 
 #head-bottom-wrapper {
-
+  position: relative;
 }
 
 #content-full-wrapper {
@@ -93,6 +106,10 @@ body {
 
 #content-wrapper {
   overflow: hidden;
+  color: #fefefe;
+  font-size: 1.4em;
+  text-shadow: 0 0 5px black;
+  padding: 0 15px;
 }
 
 #content-left-wrapper {
@@ -107,22 +124,25 @@ body {
 }
 
 #content-middle-wrapper {
-  margin: 0;
-  //float: right;
-  //width: 75%;
-  padding: 0;
-  width: 100%;
-
+  float: left;
 }
 
-
 #content-right-wrapper {
+  float: right;
+  width: 20%
+}
+
+#content-middle-wrapper, #content-right-wrapper {
+  margin: 24px 0;
+  padding: 0;
 }
 
 #content-right-wrapper-frontpage {
 }
 
 #footer-full-wrapper {
+  background-color: rgba(0, 0, 0, 0.82);
+  color: #fefefe;
 }
 
 #footer-top-full-wrapper {
@@ -137,6 +157,10 @@ body {
 #footer-middle-wrapper {
 }
 
+.footer-middle-sidebar-wrapper {
+  float: left;
+}
+
 #footer-bottom-wrapper-full {
 }
 
@@ -149,9 +173,10 @@ body {
 }
 
 #footer-last-copyright {
+  padding: 150px 0 15px 0;
 }
 
-#head-bottom-wrapper, #head-top-left-wrapper, #bottom-nav-wrapper {
+#head-bottom-wrapper, #head-top-left-wrapper, #bottom-nav-wrapper, #menu-frontpage, #menu-content {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
@@ -176,15 +201,16 @@ body {
     }
 
     .dropdown-menu {
-      display: none;
+      //display: none;
     }
 
     ul li.dropdown::after {
       content: "\f107";
       font-family: "Font Awesome 5 Free";
       font-weight: 900;
+      font-size: 0.7em;
       position: absolute;
-      bottom: 0;
+      bottom: 0.35em;
     }
 
     ul li a {
@@ -197,12 +223,12 @@ body {
       }
     }
 
-    ul li:hover, ul li.active {
-      border-radius: 26px;
+    ul li:hover, ul li.active, ul li.hover {
+      border-radius: 24px;
       border: 1px solid #bbb;
     }
 
-    ul li:hover {
+    ul li:hover, ul li.hover {
       a, &.dropdown::after {
         text-shadow: 2px 3px 4px rgba(0, 0, 0, 0.7);
       }
@@ -222,6 +248,9 @@ body {
   ul li {
     margin: 1px 2px;
     padding: 2px 16px;
+    border: none;
+    border-top: 1px solid transparent;
+    border-bottom: 1px solid transparent;
 
   }
 
@@ -235,9 +264,17 @@ body {
     padding: 0 2px 0 2px;
   }
 
+  ul li:hover, ul li.active, ul li.hover {
+
+    border: none;
+    border-top: 1px solid #aaa;
+    border-bottom: 1px solid #aaa;
+
+  }
+
 }
 
-#head-top-left-wrapper nav, #bottom-nav-wrapper nav {
+ #bottom-nav-wrapper nav {
   ul {
     margin: 0 auto 0 0;
     padding: 1px 0;
@@ -248,6 +285,9 @@ body {
     padding: 2px 16px;
     float: left;
     font-size: 0.9em;
+    border: none;
+    border-left: 1px solid transparent;
+    border-right: 1px solid transparent;
   }
 
   ul li.dropdown::after {
@@ -259,9 +299,16 @@ body {
     text-align: center;
     padding: 0;
   }
+  ul li:hover, ul li.active, ul li.hover {
+
+    border: none;
+    border-left: 1px solid #aaa;
+    border-right: 1px solid #aaa;
+
+  }
 }
 
-#meta-head-nav-wrapper nav {
+#head-top-left-wrapper nav, #meta-head-nav-wrapper nav {
   ul {
     margin: 0 auto;
     padding: 0;
@@ -271,6 +318,9 @@ body {
     margin: 1px 20px;
     padding: 0 10px;
     float: left;
+    border: none;
+    border-left: 1px solid transparent;
+    border-right: 1px solid transparent;
   }
 
   ul li.dropdown::after {
@@ -282,6 +332,24 @@ body {
     text-align: center;
     padding: 12px 12px;
   }
+
+  ul li:hover, ul li.active, ul li.hover {
+
+    border: none;
+    border-left: 1px solid #aaa;
+    border-right: 1px solid #aaa;
+
+  }
+}
+
+#head-top-left-wrapper nav{
+
+
+  ul  {
+    margin: 0
+
+  }
+
 }
 
 #head-bloginfo-wrapper {
@@ -290,33 +358,37 @@ body {
 #head-text {
   position: relative;
   height: 100px;
+
+
 }
+
 
 #head-title {
   position: absolute;
   top: 0;
-  left: 50%;
-  background: #e8e8e8;
-  display: inline;
-  margin: 15px;
-  margin-left: -140px;
-  padding: 2px 20px 6px 20px;
-  border-radius: 36px;
-  opacity: 0.75;
+  display: block;
+  width: 100%;
+  text-align: center;
+  margin: 60px 0 60px 0;
+  padding: 0;
 
-  border-right: 20px solid #757575;
-  border-left: 20px solid #757575;
-
-  box-shadow: 6px 7px 8px 5px rgba(0, 0, 0, 0.5);
 
   a {
 
+    opacity: 1;
     text-decoration: none;
-    color: #848484;
+    color: #b6b9b6;
+    font-weight: bold;
+    font-size: 1.2em;
 
-    text-shadow: -1px -1px 1px rgba(255, 255, 255, .1), 1px 1px 1px rgba(0, 0, 0, .5);
+    background-image: linear-gradient(to bottom, #969696, #6e6e6e, #494949, #272727, #000000);
+    padding: 6px 24px;
+    border-radius: 26px;
+    border-left: 10px solid blue;
+    border-right: 10px solid blue;
 
-    &:hover {
+    &:hover, &.hover {
+      color: #333;
     }
   }
 }
@@ -396,6 +468,42 @@ body {
 
 }
 
+#menu-roundabout-meta-frontpage-nav {
+
+  position: relative;
+  width: 700px;
+  height:700px;
+  margin: 0 auto;
+
+}
+
+.menu-roundabout-child, .menu-roundabout-child-inner {
+  border-radius: 75px;
+}
+
+.menu-roundabout-child {
+
+
+  position: absolute;
+
+  left: 275px;
+  top: 275px;
+
+  width: 150px;
+  height: 150px;
+  background-image: linear-gradient(to bottom, #969696, #6e6e6e, #494949, #272727, #000000);
+  box-shadow: 0px 4px 15px 1px rgba(0,0,0,0.75);
+  text-align: center;
+
+  a {
+  color: #fefefe !important;
+    line-height: 150px;
+  }
+}
+
+.menu-roundabout-child-inner {
+
+}
 
 #meta-bottom-nav ul li {
 }
@@ -404,6 +512,11 @@ body {
 }
 
 .edit-link {
+}
+
+.clear-fix
+{
+  clear: both;
 }
 
 article header h1, article header h2 {
@@ -428,12 +541,12 @@ article header h1, article header h2 {
   }
 }
 
-a, a:hover, a:visited, a:focus, a:active {
+a, a:hover, a:visited, a:focus, a:active, a.hover {
   text-decoration: none;
   color: #000;
 }
 
-a:hover {
+a:hover, a.hover {
   text-decoration: underline;
 }
 
