--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,6 @@ body {
 
 #head-middle-full-wrapper {
   position: relative;
-  height: 180px;
 }
 
 #head-middle-wrapper {
@@ -118,7 +117,6 @@ body {
 }
 
 #footer-full-wrapper {
-  background-color: rgba(0, 0, 0, 0.82);
   color: #fefefe;
 }
 
@@ -258,54 +256,51 @@ body {
 
 #head-top-left-wrapper nav ul {
   margin: 0;
+  padding: 2px;
+}
+#head-top-left-wrapper nav ul li {
+  margin: 1px 4px;
+  padding: 0;
+}
+#head-top-left-wrapper nav ul li a {
+  font-size: 0.8em;
+  padding: 2px;
 }
 
 #head-text {
   position: relative;
-  height: 100px;
 }
 
 #head-title {
-  position: absolute;
-  top: 0;
-  display: block;
+  display: inline-block;
   width: 100%;
   text-align: center;
-  margin: 60px 0 60px 0;
   padding: 0;
+  margin-top: 12px;
 }
 #head-title a {
   opacity: 1;
-  text-decoration: none;
-  color: #b6b9b6;
+  color: #666;
   font-weight: bold;
-  font-size: 1.2em;
-  background-image: linear-gradient(to bottom, #969696, #6e6e6e, #494949, #272727, #000000);
-  padding: 6px 24px;
-  border-radius: 26px;
-  border-left: 10px solid blue;
-  border-right: 10px solid blue;
+  font-size: 1.6em;
+  text-decoration: none;
 }
 #head-title a:hover, #head-title a.hover {
   color: #333;
 }
 
 #head-description {
-  display: none;
-  position: absolute;
-  bottom: 0;
-  text-align: center;
+  display: inline-block;
   width: 100%;
+  text-align: center;
+  padding: 0;
+  margin-bottom: 24px;
 }
 #head-description span {
-  background-color: #fefefe;
-  border: 1px solid #999;
-  border-bottom: none;
-  border-top-left-radius: 20px;
-  border-top-right-radius: 20px;
-  padding: 2px 16px 1px 16px;
+  border-top: 1px solid #999;
   color: #666;
   text-shadow: -1px -1px 1px rgba(255, 255, 255, 0.1), 1px 1px 1px rgba(0, 0, 0, 0.5);
+  padding: 0 12px;
 }
 
 #head-top-right-wrapper ul {
