--- a/scss/style.scss
+++ b/scss/style.scss
@@ -78,7 +78,7 @@ body {
 
 #head-middle-full-wrapper {
   position: relative;
-  height: 180px;
+
 }
 
 #head-middle-wrapper {
@@ -141,7 +141,7 @@ body {
 }
 
 #footer-full-wrapper {
-  background-color: rgba(0, 0, 0, 0.82);
+
   color: #fefefe;
 }
 
@@ -177,6 +177,7 @@ body {
 }
 
 #head-bottom-wrapper, #head-top-left-wrapper, #bottom-nav-wrapper, #menu-frontpage, #menu-content {
+// Customizer:
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
@@ -346,8 +347,19 @@ body {
 
 
   ul  {
-    margin: 0
+    margin: 0;
+    padding: 2px;
+  }
 
+  ul li {
+    margin: 1px 4px;
+    padding: 0;
+
+  }
+
+  ul li a {
+    font-size: 0.8em;
+    padding: 2px;
   }
 
 }
@@ -357,37 +369,28 @@ body {
 
 #head-text {
   position: relative;
-  height: 100px;
-
-
 }
 
 
 #head-title {
-  position: absolute;
-  top: 0;
-  display: block;
+  display: inline-block;
   width: 100%;
   text-align: center;
-  margin: 60px 0 60px 0;
   padding: 0;
-
+  margin-top: 12px;
 
   a {
 
+// Customizer:
     opacity: 1;
-    text-decoration: none;
-    color: #b6b9b6;
+    color: #666;
     font-weight: bold;
-    font-size: 1.2em;
+    font-size: 1.6em;
 
-    background-image: linear-gradient(to bottom, #969696, #6e6e6e, #494949, #272727, #000000);
-    padding: 6px 24px;
-    border-radius: 26px;
-    border-left: 10px solid blue;
-    border-right: 10px solid blue;
+    text-decoration: none;
 
     &:hover, &.hover {
+// Customizer:
       color: #333;
     }
   }
@@ -395,22 +398,20 @@ body {
 
 #head-description {
 
-  display: none;
-
-  position: absolute;
-  bottom: 0;
-  text-align: center;
+  display: inline-block;
   width: 100%;
+  text-align: center;
+  padding: 0;
+  margin-bottom: 24px;
 
   span {
-    background-color: #fefefe;
-    border: 1px solid #999;
-    border-bottom: none;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-    padding: 2px 16px 1px 16px;
+
+    // Customizer:
+    border-top: 1px solid #999;
     color: #666;
     text-shadow: -1px -1px 1px rgba(255, 255, 255, .1), 1px 1px 1px rgba(0, 0, 0, .5);
+
+    padding: 0 12px;
   }
 }
 
