de translation added

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
 Theme Name: Fazzo
-Theme URI: https://devfaz.xyz
+Theme URI: http://devfaz.xyz
 Author: Andreas Rex
 Author URI: https://www.eei.tf.fau.de/person/andreas-rex/
 Description: Theme for Fazzo
