--- a/css/style.css
+++ b/css/style.css
@@ -180,6 +180,15 @@ a.dropdown-item:hover {
   content: "";
 }
 
+.size-auto,
+.size-full,
+.size-large,
+.size-medium,
+.size-thumbnail {
+  max-width: 100%;
+  height: auto;
+}
+
 /* */
 /* Elements for Customizer: */
 /* */
