--- a/scss/style.scss
+++ b/scss/style.scss
@@ -182,6 +182,15 @@ a.dropdown-item:hover {
   content: "\f002";
 }
 
+.size-auto,
+.size-full,
+.size-large,
+.size-medium,
+.size-thumbnail {
+  max-width: 100%;
+  height: auto;
+}
+
 
 /* */
 /* Elements for Customizer: */
