--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: Fazzo-Theme
+Theme Name: Fazzo
 Theme URI: http://devfaz.xyz
 Author: Andreas Rex
 Author URI: https://www.eei.tf.fau.de/person/andreas-rex/
